// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.proto.chromeos.lab;

option go_package = "infra/unifiedfleet/api/v1/proto/chromeos/lab;ufspb";

message ChromeOSDeviceID {
  // A unique ID for chromeos device, a randomly generated uuid or AssetTag.
  string value = 1;
}